--- a/css/brainHome.css
+++ b/css/brainHome.css
@@ -179,3 +179,28 @@ body{
 	height: 94%;
 	width: 100%;
 }
+
+.starPlotAxis{
+	stroke-width: 1;
+	stroke: rgba(1, 1, 1, 0.25);
+
+}
+.starPlotDivContainerLeft{
+	position: absolute;
+	left:70%;
+	top:21%;
+	height: 20%;
+	width: 30%;
+}
+.starPlotDivContainerRight{
+	position: absolute;
+	left:70%;
+	top:42%;
+	height: 20%;
+	width: 30%;
+}
+
+.starPlotPath{
+	stroke: black;
+	fill: orange;
+}
