--- a/css/brainHome.css
+++ b/css/brainHome.css
@@ -57,7 +57,7 @@ body{
 	left:0;
 	top:81%;
 	height: 19%;
-	width: 34%;
+	width: 25%;
 	margin: 0 0;
 	
 }
@@ -66,9 +66,37 @@ body{
 	left:36%;
 	top:81%;
 	height: 19%;
-	width: 34%;
+	width: 25%;
 	margin: 0 0;
 	
+}
+.overallStarPlotDivContainerLeft{
+	position: absolute;
+	left:70%;
+	top:21%;
+	height: 20%;
+	width: 30%;
+}
+.overallStarPlotDivContainerRight{
+	position: absolute;
+	left:70%;
+	top:42%;
+	height: 20%;
+	width: 30%;
+}
+.starPlotDivContainerLeft{
+	position: absolute;
+	left:25%;
+	top:81%;
+	height: 19%;
+	width: 9%;
+}
+.starPlotDivContainerRight{
+	position: absolute;
+	left:61%;
+	top:81%;
+	height: 19%;
+	width: 9%;
 }
 
 
@@ -185,22 +213,12 @@ body{
 	stroke: rgba(1, 1, 1, 0.25);
 
 }
-.starPlotDivContainerLeft{
-	position: absolute;
-	left:70%;
-	top:21%;
-	height: 20%;
-	width: 30%;
-}
-.starPlotDivContainerRight{
-	position: absolute;
-	left:70%;
-	top:42%;
-	height: 20%;
-	width: 30%;
-}
 
 .starPlotPath{
 	stroke: black;
 	fill: orange;
+}
+.overallStarPlotPath{
+	stroke: orange;
+	fill: transparent;
 }
