--- a/css/brainHome.css
+++ b/css/brainHome.css
@@ -32,6 +32,16 @@ body{
 	text-align: center;
 }
 
+.mosaicTopDivContainerCenter{
+	position: absolute;
+	left:17%;
+	top:24%;
+	height: 5%;
+	width: 34%;
+	margin: 0 0;
+	text-align: center;
+}
+
 
 .mosaicDivContainerLeft{
 	position: absolute;
@@ -55,8 +65,8 @@ body{
 .swordDivContainerLeft{
 	position: absolute;
 	left:0;
-	top:81%;
-	height: 19%;
+	top:0%;
+	height: 23%;
 	width: 25%;
 	margin: 0 0;
 	
@@ -64,8 +74,8 @@ body{
 .swordDivContainerRight{
 	position: absolute;
 	left:36%;
-	top:81%;
-	height: 19%;
+	top:0%;
+	height: 23%;
 	width: 25%;
 	margin: 0 0;
 	
@@ -73,72 +83,112 @@ body{
 .overallStarPlotDivContainerLeft{
 	position: absolute;
 	left:70%;
-	top:21%;
+	top:30%;
 	height: 20%;
 	width: 30%;
 }
 .overallStarPlotDivContainerRight{
 	position: absolute;
 	left:70%;
-	top:42%;
+	top:50%;
 	height: 20%;
 	width: 30%;
 }
+.knnDivContainer{
+	position: absolute;
+	left:70%;
+	top:70%;
+	height: 38%;
+	width: 30%;
+}
+
 .starPlotDivContainerLeft{
 	position: absolute;
 	left:25%;
-	top:81%;
-	height: 19%;
+	top:0%;
+	height: 23%;
 	width: 9%;
 }
 .starPlotDivContainerRight{
 	position: absolute;
 	left:61%;
-	top:81%;
-	height: 19%;
+	top:0%;
+	height: 23%;
 	width: 9%;
 }
 
 
-.timelineDivContainer{
+.leftTimelineDivContainer{
 	position: absolute;
 	left:0;
-	top:8%;
-	height: 15%;
-	width: 70%;
+	top:81%;
+	height: 19%;
+	width: 34%;
+	border: 1px black solid;
+	background-color: white;
+}
+.rightTimelineDivContainer{
+	position: absolute;
+	left:36%;
+	top:81%;
+	height: 19%;
+	width: 34%;
 	border: 1px black solid;
 	background-color: white;
 }
 .sliderDivContainer{
 	position: absolute;
-	left:70%;
+	left:0%;
 	top:0%;
-	height: 20%;
-	width: 30%;
+	height: 40%;
+	width: 100%;
 }
 
 .lensSizeContainerDiv{
 	position: absolute;
 	left:20%;
 	top: 5%;
-	height: 25%%;
+	height: 45%;
 	width: 60%;
 }
 
 .zoomSizeContainerDiv{
 	position: absolute;
 	left:20%;
-	top:30%;
-	height: 25%;
+	top:55%;
+	height: 45%;
+	width: 60%;
+}
+
+.lensSizeLabelDiv{
+	position: absolute;
+	left:0%;
+	top: 5%;
+	height: 45%;
+	width: 60%;
+}
+
+.zoomSizeLabelDiv{
+	position: absolute;
+	left:0%;
+	top:55%;
+	height: 45%;
 	width: 60%;
 }
 
 .actionChooserContainerDiv{
 	position: absolute;
-	left:20%;
-	top:60%;
-	height: 35%;
-	width: 60%;
+	left:0%;
+	top:40%;
+	height: 20%;
+	width: 100%;
+}
+.chooserDivContainer{
+	position: absolute;
+	left:0;
+	top:70%;
+	height: 30%;
+	width: 100%;
 }
 
 .mosaicSvg{
@@ -171,13 +221,7 @@ body{
     stroke: black;
 }
 
-.chooserDivContainer{
-	position: absolute;
-	left:0;
-	top:1%;
-	height: 6%;
-	width: 70%;
-}
+
 .zoomDivContainer{
 	position: absolute;
 	left:0;
@@ -221,4 +265,14 @@ body{
 .overallStarPlotPath{
 	stroke: orange;
 	fill: transparent;
+}
+
+.toolBoxDiv{
+	position: absolute;
+	left:70%;
+	top:0%;
+	height: 30%;
+	width: 30%;
+
+	border: solid 1px black;
 }
