--- a/css/brainHome.css
+++ b/css/brainHome.css
@@ -15,7 +15,7 @@ body{
 .mosaicTopDivContainerLeft{
 	position: absolute;
 	left:0;
-	top:24%;
+	top:34%;
 	height: 5%;
 	width: 34%;
 	margin: 0 0;
@@ -25,7 +25,7 @@ body{
 .mosaicTopDivContainerRight{
 	position: absolute;
 	left:36%;
-	top:24%;
+	top:34%;
 	height: 5%;
 	width: 34%;
 	margin: 0 0;
@@ -34,19 +34,20 @@ body{
 
 .mosaicTopDivContainerCenter{
 	position: absolute;
-	left:17%;
-	top:24%;
-	height: 5%;
-	width: 34%;
+	left: 25%;
+    top: 34%;
+    height: 5%;
+    width: 20%;
 	margin: 0 0;
 	text-align: center;
+	z-index: 10;
 }
 
 
 .mosaicDivContainerLeft{
 	position: absolute;
 	left:0;
-	top:30%;
+	top:39%;
 	height: 50%;
 	width: 34%;
 	margin: 0 0;
@@ -55,7 +56,7 @@ body{
 .mosaicDivContainerRight{
 	position: absolute;
 	left:36%;
-	top:30%;
+	top:39%;
 	height: 50%;
 	width: 34%;
 	margin: 0 0;
@@ -66,7 +67,7 @@ body{
 	position: absolute;
 	left:0;
 	top:0%;
-	height: 23%;
+	height: 33%;
 	width: 25%;
 	margin: 0 0;
 	
@@ -75,7 +76,7 @@ body{
 	position: absolute;
 	left:36%;
 	top:0%;
-	height: 23%;
+	height: 33%;
 	width: 25%;
 	margin: 0 0;
 	
@@ -98,7 +99,7 @@ body{
 	position: absolute;
 	left:70%;
 	top:70%;
-	height: 38%;
+	height: 30%;
 	width: 30%;
 }
 
@@ -106,14 +107,14 @@ body{
 	position: absolute;
 	left:25%;
 	top:0%;
-	height: 23%;
+	height: 33%;
 	width: 9%;
 }
 .starPlotDivContainerRight{
 	position: absolute;
 	left:61%;
 	top:0%;
-	height: 23%;
+	height: 33%;
 	width: 9%;
 }
 
@@ -121,8 +122,8 @@ body{
 .leftTimelineDivContainer{
 	position: absolute;
 	left:0;
-	top:81%;
-	height: 19%;
+	top:90%;
+	height: 9.5%;
 	width: 34%;
 	border: 1px black solid;
 	background-color: white;
@@ -130,8 +131,8 @@ body{
 .rightTimelineDivContainer{
 	position: absolute;
 	left:36%;
-	top:81%;
-	height: 19%;
+	top:90%;
+	height: 9.5%;
 	width: 34%;
 	border: 1px black solid;
 	background-color: white;
@@ -201,6 +202,11 @@ body{
     stroke-width: 2;
     fill: none;
 
+}
+.swordLine{
+	stroke: white;
+    stroke-width: 5;
+    fill: none;
 }
 
 .lineRight{
@@ -275,4 +281,21 @@ body{
 	width: 30%;
 
 	border: solid 1px black;
+}
+
+.loadingDiv{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: #ccc;
+	opacity: 0.7;
+
+}
+.loadingSpinnerDiv{
+	position: absolute;
+	left: 40%;
+	top: 40%;
+	width: 20%;
+	height: 20%;
+	text-align: center;
 }
