--- a/css/brainHome.css
+++ b/css/brainHome.css
@@ -10,31 +10,30 @@ body{
 	width: 100%;
 	margin: 0 0;
 	background-color: #ffffff;
-
 }
+
+
 .mosaicTopDivContainerLeft{
 	position: absolute;
-	left:0;
+	left:1%;
 	top:34%;
 	height: 5%;
-	width: 34%;
+	width: 40%;
 	margin: 0 0;
 	text-align: center;
 }
-
 .mosaicTopDivContainerRight{
 	position: absolute;
-	left:36%;
+	left:43%;
 	top:34%;
 	height: 5%;
-	width: 34%;
+	width: 40%;
 	margin: 0 0;
 	text-align: center;
 }
-
 .mosaicTopDivContainerCenter{
 	position: absolute;
-	left: 25%;
+	left: 31%;
     top: 34%;
     height: 5%;
     width: 20%;
@@ -46,55 +45,92 @@ body{
 
 .mosaicDivContainerLeft{
 	position: absolute;
-	left:0;
+	left:1%;
 	top:39%;
 	height: 50%;
-	width: 34%;
+	width: 40%;
 	margin: 0 0;
 	background-color: #cccccc;
 }
 .mosaicDivContainerRight{
 	position: absolute;
-	left:36%;
+	left:43%;
 	top:39%;
 	height: 50%;
-	width: 34%;
+	width: 40%;
 	margin: 0 0;
 	background-color: #cccccc;
 }
 
+
 .swordDivContainerLeft{
 	position: absolute;
-	left:0;
-	top:0%;
-	height: 33%;
-	width: 25%;
-	margin: 0 0;
-	
+	left:1%;
+	top:2%;
+	height: 30%;
+	width: 28%;
+	margin: 0 0;	
 }
 .swordDivContainerRight{
 	position: absolute;
-	left:36%;
-	top:0%;
-	height: 33%;
-	width: 25%;
-	margin: 0 0;
-	
+	left:43%;
+	top:2%;
+	height: 30%;
+	width: 28%;
+	margin: 0 0;	
 }
+.starPlotDivContainerLeft{
+	position: absolute;
+	left:30%;
+	top:2%;
+	height: 30%;
+	width: 10%;
+}
+.starPlotDivContainerRight{
+	position: absolute;
+	left:72%;
+	top:2%;
+	height: 30%;
+	width: 10%;
+}
+
+
 .overallStarPlotDivContainerLeft{
 	position: absolute;
-	left:70%;
-	top:30%;
-	height: 20%;
-	width: 30%;
+	left:1%;
+	top:40%;
+	height: 35%;
+	width: 35%;
 }
 .overallStarPlotDivContainerRight{
 	position: absolute;
-	left:70%;
-	top:50%;
-	height: 20%;
-	width: 30%;
+	left:43%;
+	top:40%;
+	height: 35%;
+	width: 35%;
 }
+
+
+.leftTimelineDivContainer{
+	position: absolute;
+	left:1%;
+	top:90%;
+	height: 9%;
+	width: 40%;
+	border: 1px black solid;
+	background-color: white;
+}
+.rightTimelineDivContainer{
+	position: absolute;
+	left:43%;
+	top:90%;
+	height: 9%;
+	width: 40%;
+	border: 1px black solid;
+	background-color: white;
+}
+
+
 .knnDivContainer{
 	position: absolute;
 	left:70%;
@@ -103,112 +139,93 @@ body{
 	width: 30%;
 }
 
-.starPlotDivContainerLeft{
+
+.starPlotLegend{
 	position: absolute;
-	left:25%;
-	top:0%;
-	height: 33%;
-	width: 9%;
-}
-.starPlotDivContainerRight{
-	position: absolute;
-	left:61%;
-	top:0%;
-	height: 33%;
-	width: 9%;
+	left:85%;
+	top:2%;
+	height: 30%;
+	width: 14%;
+	border: solid 1px black;
 }
 
-
-.leftTimelineDivContainer{
+.toolBoxDiv{
 	position: absolute;
-	left:0;
-	top:90%;
-	height: 9.5%;
-	width: 34%;
-	border: 1px black solid;
-	background-color: white;
-}
-.rightTimelineDivContainer{
-	position: absolute;
-	left:36%;
-	top:90%;
-	height: 9.5%;
-	width: 34%;
-	border: 1px black solid;
-	background-color: white;
-}
-.sliderDivContainer{
-	position: absolute;
-	left:0%;
-	top:0%;
-	height: 40%;
-	width: 100%;
-}
-
-.lensSizeContainerDiv{
-	position: absolute;
-	left:20%;
-	top: 5%;
-	height: 45%;
-	width: 60%;
-}
-
-.zoomSizeContainerDiv{
-	position: absolute;
-	left:20%;
-	top:55%;
-	height: 45%;
-	width: 60%;
-}
-
-.lensSizeLabelDiv{
-	position: absolute;
-	left:0%;
-	top: 5%;
-	height: 45%;
-	width: 60%;
-}
-
-.zoomSizeLabelDiv{
-	position: absolute;
-	left:0%;
-	top:55%;
-	height: 45%;
-	width: 60%;
+	left:85%;
+	top:34%;
+	height: 64%;
+	width: 14%;
+	border: solid 1px black;
 }
 
 .actionChooserContainerDiv{
 	position: absolute;
 	left:0%;
-	top:40%;
-	height: 20%;
+	top:2%;
+	height: 15%;
+	width: 100%;
+}
+.sliderDivContainer{
+	position: absolute;
+	left:0%;
+	top:16%;
+	height: 15%;
 	width: 100%;
 }
 .chooserDivContainer{
 	position: absolute;
 	left:0;
-	top:70%;
-	height: 30%;
+	top:32%;
+	height: 68%;
 	width: 100%;
 }
+
+.lensSizeContainerDiv{
+	position: absolute;
+	left:35%;
+	top: 5%;
+	height: 45%;
+	width: 60%;
+}
+.zoomSizeContainerDiv{
+	position: absolute;
+	left:35%;
+	top:55%;
+	height: 45%;
+	width: 60%;
+}
+.lensSizeLabelDiv{
+	position: absolute;
+	left:1%;
+	top: 5%;
+	height: 45%;
+	width: 60%;
+}
+.zoomSizeLabelDiv{
+	position: absolute;
+	left:1%;
+	top:55%;
+	height: 45%;
+	width: 60%;
+}
+
 
 .mosaicSvg{
 	height: 100%;
 	width: 100%;
 }
 
+
 .line{
     stroke: steelblue;
     stroke-width: 2;
     fill: none;
-
 }
 .swordLine{
 	stroke: white;
     stroke-width: 5;
     fill: none;
 }
-
 .lineRight{
     stroke: #cc0000;
     stroke-width: 2;
@@ -219,7 +236,6 @@ body{
     stroke: black;
     stroke-width: 2;
     fill: none;
-
 }
 
 .timeWindow{
@@ -237,11 +253,9 @@ body{
 	background-color: white;
 	visibility: hidden;
 }
-
 .zoomSquareDiv{
 	position: absolute;
 }
-
 .zoomTitleBar{
 	position: absolute;
 	top: 0;
@@ -258,12 +272,15 @@ body{
 	width: 100%;
 }
 
+
 .starPlotAxis{
 	stroke-width: 1;
-	stroke: rgba(1, 1, 1, 0.25);
-
+	stroke: rgba(1, 1, 1, 0.75);
 }
-
+.overallStarPlotAxis{
+	stroke-width: 2;
+	stroke: rgba(1, 1, 1, 1);
+}
 .starPlotPath{
 	stroke: black;
 	fill: orange;
@@ -273,15 +290,6 @@ body{
 	fill: transparent;
 }
 
-.toolBoxDiv{
-	position: absolute;
-	left:70%;
-	top:0%;
-	height: 30%;
-	width: 30%;
-
-	border: solid 1px black;
-}
 
 .loadingDiv{
 	position: absolute;
@@ -289,7 +297,6 @@ body{
 	height: 100%;
 	background-color: #ccc;
 	opacity: 0.7;
-
 }
 .loadingSpinnerDiv{
 	position: absolute;
